sortable fix, and constant scrollbar

--- a/src/web/admin/css/core/app/common.less
+++ b/src/web/admin/css/core/app/common.less
@@ -1,4 +1,8 @@
-﻿.app-head {
+﻿html{
+  height:101%;
+}
+
+.app-head {
     background-color: #FFFFFF;
 }
 .app-body {
